--- a/main.html
+++ b/main.html
@@ -8,6 +8,6 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>made by Yash Mudgal &amp; Sahaj Rastogi</p>
+<p>Made by Yash Mudgal &amp; Sahaj Rastogi</p>
 <p>&nbsp;</p>
 <p><strong>&nbsp;</strong></p>
